--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag image-search-app:1.0.0
+      run: docker build . --file Dockerfile --tag myusername/image-search-app:1.0.0
+
+    - name: Push Docker image to Docker Hub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPOSITORY_NAME }}
+
+    # Optionally, you can add a step to scan the image for vulnerabilities:
+    - name: Scan Docker image for vulnerabilities (optional)
+       uses: aquasecurity/trivy-action@v0.5.0
+       with:
+         image-ref: myusername/image-search-app:1.0.0
