--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
       run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPOSITORY_NAME }}
 
     # A step to scan the image for vulnerabilities:
-    - name: Scan Docker image for vulnerabilities (optional)
-      uses: aquasecurity/trivy-action@v0.5.0
-      with:
-        image-ref: myusername/image-search-app:1.0.0
+    #- name: Scan Docker image for vulnerabilities (optional)
+     # uses: aquasecurity/trivy-action@v0.5.0
+     # with:
+       # image-ref: myusername/image-search-app:1.0.0
