--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
@@ -8,30 +8,30 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the code from the repository
     - name: Checkout code
       uses: actions/checkout@v4
 
+    # Step 2: Set up Docker Buildx (for multi-platform builds, if needed)
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # Step 3: Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # Step 4: Build the Docker image
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag myusername/image-search-app:1.0.0
+      run: |
+        docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/image-search-app-v1.0.0:latest
 
+    # Step 5: Push the Docker image to Docker Hub
     - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPOSITORY_NAME }}
-
-    # A step to scan the image for vulnerabilities:
-    #- name: Scan Docker image for vulnerabilities (optional)
-     # uses: aquasecurity/trivy-action@v0.5.0
-     # with:
-       # image-ref: myusername/image-search-app:1.0.0
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/image-search-app-v1.0.0:latest
