--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -31,7 +31,7 @@ jobs:
           echo "Running tests... (Replace with actual test commands)"
 
   # Job 2: Deploy to Heroku
-  deploy:
+  deploying_to_Heroku:
     needs: build_and_test  # This job depends on the success of the build_and_test job
     runs-on: ubuntu-latest
     steps:
@@ -45,7 +45,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Log in to Heroku
-        uses: akshnz/heroku-login-action@v1
+        uses: akshnz/heroku-deploy@v1.0.0
         with:
           api_key: ${{ secrets.HEROKU_API_KEY }}  # Heroku API Key from your Heroku account
 
