--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install  # Installs your app dependencies
 
-      - name: Run tests
-        run: npm test  # Run your test scripts (optional if you have tests)
+     # - name: Run tests
+     #   run: npm test  # Run your test scripts (optional if you have tests)
 
       - name: Build and Deploy
         run: npm run build  # This could be your build script if you have one, otherwise just use "npm start"
