added build script in scripts object in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+     "build": "npm run build"
   },
   "author": "moka autine",
   "license": "ISC",
